--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/_ViewImports.cshtml
@@ -1,3 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using NetCoreCMS.Core.Modules.Media
+
+@using NetCoreCMS.Core.Modules.Cms
+@using NetCoreCMS.Core.Modules.Cms.Models
+@using NetCoreCMS.Core.Modules.Cms.Models.ManageViewModels
+@using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
+
+@using NetCoreCMS.Framework.Utility
+@using NetCoreCMS.Framework.Modules
+@using NetCoreCMS.Framework.Modules.Widgets
+@using NetCoreCMS.Framework.Core.Models
+
+@using NetCoreCMS.Modules.Cms.Models.ViewModels;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
