--- a/NetCoreCMS.Web/Modules/NetCoreCMS.Notice/Views/Widgets/NoticeHorizontal.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.Notice/Views/Widgets/NoticeHorizontal.cshtml
@@ -3,12 +3,12 @@
 
 @model List<NccNotice>
 
-<div style='height:20px; width:100%; text-align:center; padding: 5px 10px;'>
+<div style='width:100%; text-align:center; padding: 5px 10px;'>
     <marquee behavior="scroll" direction="left">
         @foreach (var item in Model)
         {
             <span> <a href="~/NoticeHome/Details/?id=@item.Id">@item.Title</a> || </span> 
         }
-        <span><a href="~/NoticeHome/Index">View All</a> </span>
+        @*<span><a href="~/NoticeHome/Index">View All</a> </span>*@
     </marquee>
 </div>
