Css render section on layout top added

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -16,12 +16,13 @@
     ViewData["Title"] = Model.Title;
 }
  
+@section Styles{
+    <style>
+       @Html.Raw("        div{            color:green !important;        }");
+    </style>
+}
 <div class="row">
-    <div class="col-lg-12"> 
-        <p>
-            @Html.Raw(Model.Content)
-        </p> 
-    </div>
+    @Html.Raw(Model.Content)
 </div>
  
 @section Scripts{
