Broken push fix.

--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -149,7 +149,7 @@
                                 <li><a href="#"><i class="fa fa-user fa-fw"></i> Profile</a></li>
                             </ul>
                         </li> 
-                        @Html.Raw(AdminMenuHelper.ModulesAdminMenuHtml()); 
+                        @Html.Raw(AdminMenuHelper.GetAdminMenuHtml(AdminMenuHelper.ModulesAdminMenus())); 
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
