page search in menu

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionPanel.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionPanel.cshtml
@@ -48,17 +48,18 @@
 
                         <div id="searchPages" class="tab-pane fade in">
                             <div class="panel-body">
-                                @*<div id="searchPagesCheckBoxList" class="checkBoxList">
-                                    <div class="checkbox">
+                                <input type="text" id="searchPage" class="form-control" />
+                                <div id="searchPagesCheckBoxList" class="checkBoxList">
+                                    @*<div class="checkbox">
                                         <label><input type="checkbox" value="">Page 1</label>
-                                    </div>
-                                    <div class="checkbox">
+                                    </div>*@
+                                    @*<div class="checkbox">
                                         <label><input type="checkbox" value="">Page 2</label>
                                     </div>
                                     <div class="checkbox disabled">
                                         <label><input type="checkbox" value="">Page 3</label>
-                                    </div>
-                                </div>*@
+                                    </div>*@
+                                </div>
                             </div>
                         </div>
                     </div>
