--- a/NetCoreCMS.Web/Views/Home/SetupSuccess.cshtml
+++ b/NetCoreCMS.Web/Views/Home/SetupSuccess.cshtml
@@ -50,6 +50,7 @@
             <h1>NetCoreCMS Setup Successful</h1>
             <hr />
             <h2>Please restart and enjoy <strong>NetCoreCMS</strong></h2> 
+            <a href="/">Home</a>
         </div>       
         
     </div>
