--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
@@ -47,7 +47,7 @@
                 }
                 else
                 {
-                    <li class="list-group-item no-boarder" ncc-menu-item-id="0" ncc-menu-item-action-type="Url" ncc-menu-item-controller="CmsHome" ncc-menu-item-action="Index" ncc-menu-item-action-data="" ncc-menu-item-url="/CmsHome" ncc-menu-item-target="" ncc-menu-item-order="1" ncc-menu-item-title="Home">
+                    <li class="list-group-item no-boarder" ncc-menu-item-id="0" ncc-menu-item-action-type="Url" ncc-menu-item-controller="Home" ncc-menu-item-action="Index" ncc-menu-item-action-data="" ncc-menu-item-url="/" ncc-menu-item-target="" ncc-menu-item-order="1" ncc-menu-item-title="Home">
                         <div class="menu-item-content">
                             <div class="pull-left" style="padding: 5px 5px;">
                                 <i class="glyphicon glyphicon-move margin-right-10"></i>
