--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Index.cshtml
@@ -1,111 +1,120 @@
 ﻿@using NetCoreCMS.Framework.Utility
+@using System.Collections
+
+@model List<NccMediaViewModel>
+
 @{
-    Layout = Constants.SiteLayoutName;
+    Layout = Constants.AdminLayoutName;
+    ViewData["PageTitle"] = "Image Gallary";
+    ViewData["PageSubtitle"] = "Manage existing image media";
+    if (ViewBag.IsFile)
+    {
+        ViewData["PageTitle"] = "File Storage";
+        ViewData["PageSubtitle"] = "Manage existing files";
+    }
 }
 
-<h1> Holaaaaaaaaa </h1>
+@section Styles{
+    <link href="~/lib/lightbox2/src/css/lightbox.css" rel="stylesheet" />
+}  
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
 
 <div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run & Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @ViewData["PageSubtitle"]
+                <div class="pull-right"><a asp-controller="CmsMedia" asp-action="Upload" asp-route-isFile="@ViewBag.IsFile" class="btn btn-outline btn-primary btn-xs">Upload</a></div>
+            </div>
+            <div class="panel-body">
+                @foreach (var item in Model)
+                {
+                    if (item.IsDir)
+                    {
+                        <a asp-controller="MediaHome" asp-action="Index" asp-route-sq="@item.FullPath" asp-route-isFile="@ViewBag.IsFile">
+                            <div style="float:left; margin:5px;padding:5px; width:200px; height:235px; text-align:center; border:1px solid; overflow:hidden; display:table;">
+                                <span style="vertical-align:middle;  display: table-cell;">
+                                    <strong>@item.FileName</strong> <br />
+                                    @if (item.TotalSubDir > 0)
+                                    {
+                                        <span>Dir(@item.TotalSubDir)</span><br />
+                                    }
+                                    @if (item.TotalFile > 0 && ViewBag.IsFile==true)
+                                    {
+                                        <span>Total File(@item.TotalFile) </span>
+                                    }
+                                    else if (item.TotalFile > 0)
+                                    {
+                                        <span>Total Image(@item.TotalFile) </span>
+                                    }
+                                </span>
+                            </div>
+                        </a>
+                    }
+                    else if(item.IsImage)
+                    {
+                        <div style="float:left; margin:5px;padding:5px; width:200px; height:235px; text-align:center; border:1px solid; overflow:hidden;">
+                            <a href="@item.FullPath" data-lightbox="image-gallary" data-title="@item.FileName">
+                                <img src="@item.FullPath" width="188px" height="120px" title="@item.FileName" />
+                                @*<img id="myImg"  src="~/Images/docs-icon.png" width="188px" height="120px" title="@item.FileName" />*@
+                                @if (item.FileName.Length > 11)
+                                {
+                                    <span>@item.FileName.Substring(0, 11)</span>
+                                    <span> ~ </span>
+                                    <span>@item.FileName.Substring(item.FileName.LastIndexOf("."), 4)</span>
+                                }
+                                else
+                                {
+                                    <span>@item.FileName</span>
+                                }
+                                (@item.ItemSize)<br />
+                            </a>
+                            <span>Cr: @item.CreationTime.ToString("yyyy-MM-dd hh:mm tt")</span>
+                            <input type="text" class="form-control" onClick="this.select();" value="@item.FullPath" />
+                            <hr style="padding:2px;margin:1px;" />
+                            @*<a asp-controller="CmsMedia" asp-action="Rename" asp-route-fullPath="@item.FullPath" asp-route-parrentDir="@item.ParrentDir" class="btn btn-xs btn-outline btn-primary">Rename</a>*@
+                            <a asp-controller="MediaHome" asp-action="Delete" asp-route-fullPath="@item.FullPath.Replace("/","\\")" asp-route-parrentDir="@item.ParrentDir" asp-route-isFile="@ViewBag.IsFile" class="btn btn-xs btn-outline btn-danger">Delete</a>
+                        </div>
+                    }
+                    else
+                    {
+                        <div style="float:left; margin:5px;padding:5px; width:200px; height:235px; text-align:center; border:1px solid; overflow:hidden;">
+                            <a href="@item.FullPath" target="_blank">
+                                <img src="~/Images/docs-icon.png" width="188px" height="120px" title="@item.FileName" />
+                                @if (item.FileName.Length > 11)
+                                {
+                                    <span>@item.FileName.Substring(0, 11)</span>
+                                    <span> ~ </span>
+                                    <span>@item.FileName.Substring(item.FileName.LastIndexOf("."), 4)</span>
+                                }
+                                else
+                                {
+                                    <span>@item.FileName</span>
+                                }
+                                (@item.ItemSize)<br />
+                            </a>
+                            <span>Ct: @item.CreationTime.ToString("yyyy-MM-dd hh:mm tt")</span>
+                            <hr style="padding:2px;margin:1px;" />
+                            @*<a asp-controller="CmsMedia" asp-action="Rename" asp-route-fullPath="@item.FullPath" asp-route-parrentDir="@item.ParrentDir" class="btn btn-xs btn-outline btn-primary">Rename</a>*@
+                            <a asp-controller="MediaHome" asp-action="Delete" asp-route-fullPath="@item.FullPath.Replace("/","\\")" asp-route-parrentDir="@item.ParrentDir" asp-route-isFile="@ViewBag.IsFile" class="btn btn-xs btn-outline btn-danger">Delete</a>
+                        </div>
+                    }
+                }
+            </div>
+            <!-- /.panel-body -->
+        </div>
+        <!-- /.panel -->
     </div>
 </div>
+
+               <!-- The Modal -->
+               <div id="myModal" class="modal">
+                   <span class="close">&times;</span>
+                   <img class="modal-content" id="img01">
+                   <div id="caption"></div>
+               </div>
+
+
+@section Scripts{
+    <script src="~/lib/lightbox2/src/js/lightbox.js"></script>
+}
