--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/_ViewImports.cshtml
@@ -1,3 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using NetCoreCMS.Core.Modules.Media
+@using NetCoreCMS.Core.Modules.Media.Models
+
+@using NetCoreCMS.Framework.Utility
+@using NetCoreCMS.Framework.Modules
+@using NetCoreCMS.Framework.Modules.Widgets
+@using NetCoreCMS.Framework.Core.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
