Link added in website name

--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
@@ -48,7 +48,7 @@
         <div class="container-fluid topHeader">
             <div class="container">
                 <div class="topLogo">
-                    <a asp-area="" asp-controller="CmsHome" asp-action="Index"></a><h1>@WebSite.Name</h1>
+                    <a href="/"><h1>@WebSite.Name</h1></a>
                     <h4>@WebSite.Tagline</h4>
                 </div>
                 <div id="topMenu" class="topMenu pull-right">
