Bangladesh removed from powered by

--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_NoTopLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_NoTopLayout.cshtml
@@ -377,7 +377,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 copyright"> Copyrights &copy; @Html.Raw(WebSite.Copyrights) @DateTime.Now.Year</div>
-                    <div class="col-md-6 poweredby"> Powered by <a href="#" target="_blank">NetCoreCMS-Bangladesh</a></div>
+                    <div class="col-md-6 poweredby"> Powered by <a href="#" target="_blank">NetCoreCMS</a></div>
                 </div>
             </div>
         </footer>
