--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -204,7 +204,7 @@
     <div class="row text-center">
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - NetCoreCMS-Bangladesh</p>
+            <p>&copy; @DateTime.Now.Year - NetCoreCMS</p>
         </footer>
     </div>
     <!-- /#wrapper -->
