layout construction with partial view for site layout completed

--- a/NetCoreCMS.Web/Themes/Default/wwwroot/css/site.css
+++ b/NetCoreCMS.Web/Themes/Default/wwwroot/css/site.css
@@ -59,8 +59,9 @@
 }
 
 .mainBody {
-    /*min-height: 100vh;*/
+    min-height: 100vh;
     padding: 0px;
+    word-wrap: break-word;
 }
 .fullWidthSlider {
     margin-top: -20px;
