--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
@@ -15,30 +15,15 @@
 
 @{
     var WebSite = GlobalConfig.WebSite;
+    ViewBag.CurrentLayout = "FullWidthLayout";
 }
 
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - @WebSite.SiteTitle</title>
-
-        <link href="~/css/ncc-common.css" rel="stylesheet" />
-        <script src="~/js/ncc-common.js" asp-append-version="true"></script>
-
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/Themes/Default/css/site.css" />
-        <link href="~/lib/css-loader/dist/css-loader.css" rel="stylesheet" />
-
-
+        @Html.Partial("Parts/_Head")
         @Html.Raw(JavaScriptSnippet.FullScript)
-
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        
-        @RenderSection("Styles", required: false)
-        
+        @RenderSection("Styles", required: false)        
     </head>
     <body id="body">
         <div id="loadingMask" class="loader loader-double"></div>
