--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Footer.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Footer.cshtml
@@ -77,3 +77,34 @@
     </div>
 </footer>
 <!--  Footer End -->
+
+<script type="text/javascript">
+$(document).ready(function () {
+    var didScroll = true;
+
+    $(window).scroll(function () {
+        didScroll = true;
+    });
+    setInterval(function () {
+        if (didScroll) {
+            didScroll = false;
+            var scroll = $(window).scrollTop();
+            //console.log(scroll);
+            //Same that all the if else statements
+            switch (true) {
+                case (scroll >= 100):
+                    $("#mainNavbar").addClass("navbar-fixed-top");
+                    $("#navbarWebsiteName").removeClass("navbar-brand-with-top-menu");
+                    break;
+                case (scroll <= 50):
+                    $("#mainNavbar").removeClass("navbar-fixed-top");
+                    $("#navbarWebsiteName").addClass("navbar-brand-with-top-menu");
+                    break;
+                default:
+                    break;
+            }
+        }
+    }, 50);
+
+});
+</script>
